commented out pricing info

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							</article>
 
 						<!-- Elements -->
-							<article id="elements">
+							<!-- <article id="elements">
 								<h2 class="major">Elements</h2>
 
 								<section>
@@ -285,7 +285,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li><span class="button primary disabled">Disabled</span></li>
 										<li><span class="button disabled">Disabled</span></li>
 									</ul>
-								</section>
+								</section> -->
 
 								<section>
 									<h3 class="major">Form</h3>
