commented out more stuff I don't need

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ul>
 								</section> -->
 
-								<section>
+								<!-- <section>
 									<h3 class="major">Form</h3>
 									<form method="post" action="#">
 										<div class="fields">
@@ -334,7 +334,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><input type="submit" value="Send Message" class="primary" /></li>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
-									</form>
+									</form> -->
 								</section>
 
 							</article>
