missed a section tag

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
 									</form> -->
-								</section>
+								<!-- </section> -->
 
 							</article>
 
