missed an article tag

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</form> -->
 								<!-- </section> -->
 
-							</article>
+							<!-- </article> -->
 
 					</div>
 
