--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Hi! I'm James Monaco</h1>
+								<p>Who am I? Well I'm a Software Developer and baker/chef on the side. 
+									I'm proficient in JavaScript, React, Redux, HTML, CSS, Node.js, and Python. Thanks for stopping by!</p>
 							</div>
 						</div>
 						<nav>
@@ -90,8 +90,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 									<li><a href="https://www.linkedin.com/in/james-monaco-770127175/" class="icon brands fa-linkedin-in"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/monaco021" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
