--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hi! I'm James Monaco</h1>
-								<p>Who am I? Well I'm a Software Developer and baker/chef on the side. 
+								<p>I'm a Software Developer and baker/chef on the side. 
 									I'm proficient in JavaScript, React, Redux, HTML, CSS, Node.js, and Python. Thanks for stopping by!</p>
 							</div>
 						</div>
@@ -47,8 +47,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Hey again, let's talk about me. I graduated from The University of Oklahoma with a BA in Sociology. After that I started recruiting software developers for TEKsystems and that's where I fell in love with coding. I spent all day talking to devs about all the amazing projects they've build and exploring any of their projects that were hosted. I wanted nothing more than to start diving into it!</p>
+								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forwarding 3 months later I decided to give up my career, drop everything, and apply to app Academy's online web development program. I spent every hour of the day for the next 7 months honing in on my ability to code and learn, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
 							</article>
 
 						<!-- Work -->
@@ -69,7 +69,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="monaco.james18@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
