--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Hey again, let's talk about me. I graduated from The University of Oklahoma with a BA in Sociology. After that I started recruiting software developers for TEKsystems and that's where I fell in love with coding. I spent all day talking to devs about all the amazing projects they've build and exploring any of their projects that were hosted. I wanted nothing more than to start diving into it!</p>
-								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forwarding 3 months later I decided to give up my career, drop everything, and apply to app Academy's online web development program. I spent every hour of the day for the next 7 months honing in on my ability to code and learn, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forward 3 months later I decided to give up my career, drop everything, and apply to app Academy's online web development program. I spent every hour of the day for the next 7 months honing in on my ability to code, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
 							</article>
 
 						<!-- Work -->
@@ -69,7 +69,12 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="monaco.james18@gmail.com">
+								<div class="field half">
+									Phone: 602-820-2871
+									Email: monaco.james18@gmail.com
+								</div >
+
+								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -88,7 +93,7 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
 								<ul class="icons">
 									<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
