changed title of tab and added photo of me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Monaco Codes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/me.png" alt="" /></span>
 								<p>Hey again, let's talk about me. I graduated from The University of Oklahoma with a BA in Sociology. After that I started recruiting software developers for TEKsystems and that's where I fell in love with coding. I spent all day talking to devs about all the amazing projects they've build and exploring any of their projects that were hosted. I wanted nothing more than to start diving into it!</p>
 								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forward 3 months later I decided to give up my career, drop everything, and apply to app Academy's online web development program. I spent every hour of the day for the next 7 months honing in on my ability to code, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
 							</article>
