added my first project on it

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<h2 class="major">Projects</h2>
+								<span class="image main"><img src="images/collegebnb.png" alt="" /></span>
+								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
