added new image to work

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/collegebnb.png" alt="" /></span>
 								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
-								
+								<h2 class="major">Projects</h2>
+								<span class="image main"><img src="images/petReads.png" alt="" /></span>
+								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
 							</article>
 
 						<!-- About -->
