fixed project section and changed a sentence in my bio

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/me.png" alt="" /></span>
 								<p>Hey again, let's talk about me. I graduated from The University of Oklahoma with a BA in Sociology. After that I started recruiting software developers for TEKsystems and that's where I fell in love with coding. I spent all day talking to devs about all the amazing projects they've build and exploring any of their projects that were hosted. I wanted nothing more than to start diving into it!</p>
-								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forward 3 months later I decided to give up my career, drop everything, and apply to app Academy's online web development program. I spent every hour of the day for the next 7 months honing in on my ability to code, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>So I started writing my very first lines of JavaScript on freecodecamp.org and instantly fell in love with all the challenges and research involved. Fast forward 3 months later I decided to take a big step in my career and quit my job to start a full time web development and software engineering fundamentals program at app Academy. I spent every hour of the day for the next 7 months honing in on my ability to code, it was the best choice I've ever made. By the way, check out my <a href="#work">awesome work</a>.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Projects</h2>
+								<h2 class="major">Collegebnb</h2>
 								<span class="image main"><img src="images/collegebnb.png" alt="" /></span>
-								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
-								<h2 class="major">Projects</h2>
+								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend, and CSS to style. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
+								<h2 class="major">Pet-Reads</h2>
 								<span class="image main"><img src="images/petReads.png" alt="" /></span>
-								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
+								<p>Pet-Reads is a clone of GoodReads, that uses Express.js on the backend, React.js and Redux on the frontend, and CSS to style. PetReads, a Goodreads clone, is an application integrated with Chewy's UI design that allows users to share pet-related books, leave reviews, and add books to their bookshelves (want to read, have read, and currently reading). Check it out for yourself : <a href="https://petreads.herokuapp.com/">Collegebnb</a></p>
 							</article>
 
 						<!-- About -->
