fixed contact bug

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 								<h2 class="major">Contact</h2>
 								<div class="field half">
 									Phone: 602-820-2871
+								</div >
+								<div class="field half">
 									Email: monaco.james18@gmail.com
 								</div >
-
+								
 								<!-- <form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
