--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 							</article>
 
 						<!-- About -->
+							<!--Need to change to skills -->>
 							<!-- <article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
