fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 								<h2 class="major">Collegebnb</h2>
 								<span class="image main"><img src="images/collegebnb.png" alt="" /></span>
 								<p>Collegebnb is a clone of Airbnb, that uses Python on the backend, React and Redux on the frontend, and CSS to style. Using this app users can see listings around college campuses or a specific searched location. Using the Google API users can see pins of the listings on the map as well as the price. Once a user finds a place they love they can book a reservation using our built in calendar. Check it out for yourself : <a href="https://collegebnb1.herokuapp.com/">Collegebnb</a></p>
-								<h2 class="major">Pet-Reads</h2>
+								<h2 class="major">PetReads</h2>
 								<span class="image main"><img src="images/petReads.png" alt="" /></span>
-								<p>Pet-Reads is a clone of GoodReads, that uses Express.js on the backend, React.js and Redux on the frontend, and CSS to style. PetReads, a Goodreads clone, is an application integrated with Chewy's UI design that allows users to share pet-related books, leave reviews, and add books to their bookshelves (want to read, have read, and currently reading). Check it out for yourself : <a href="https://petreads.herokuapp.com/">Pet-Reads</a></p>
+								<p>PetReads is a clone of GoodReads, that uses Express.js on the backend, React.js and Redux on the frontend, and CSS to style. PetReads, a Goodreads clone, is an application integrated with Chewy's UI design that allows users to share pet-related books, leave reviews, and add books to their bookshelves (want to read, have read, and currently reading). Check it out for yourself : <a href="https://petreads.herokuapp.com/">Pet-Reads</a></p>
 							</article>
 
 						<!-- About -->
