--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<div class="field half">
-									Phone: 602-820-2871
+									Phone: (602) 820-2871
 								</div >
 								<div class="field half">
 									Email: monaco.james18@gmail.com
