--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Monaco Codes</title>
@@ -62,7 +58,8 @@
 							</article>
 
 						<!-- About -->
-							<!--Need to change to skills -->>
+							<!--Need to change to skills with icons -->>
+
 							<!-- <article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
